--- a/scss/main.css
+++ b/scss/main.css
@@ -62,11 +62,21 @@ body {
 .body-inner {
   max-width: 1440px;
   margin: auto;
+  overflow: hidden;
   background-color: #fff;
 }
 
 a {
   text-decoration: none;
+}
+
+main {
+  width: 100%;
+}
+
+.section-wrapper {
+  width: 86%;
+  margin: auto;
 }
 
 @font-face {
@@ -159,7 +169,7 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-family: 'Yeseva One', cursive;
+  font-family: "Yeseva One", cursive;
   text-transform: uppercase;
   font-size: 0.9rem;
   color: #fff;
@@ -266,7 +276,7 @@ a {
 }
 
 .header__wrap .header__text-wrap .header__title {
-  font-family: 'Yeseva One', cursive;
+  font-family: "Yeseva One", cursive;
   text-transform: uppercase;
   font-size: 2.5rem;
   color: #fff;
@@ -349,24 +359,14 @@ a {
   color: #fff;
 }
 
-main {
-  width: 100%;
-}
-
-.projects {
-  padding: 8% 0 30% 6%;
+.section-wrapper_projects {
+  padding: 8% 0 30%;
   color: #fff;
   background-color: #131313;
   background-image: url("../assets/img/city-Group.png");
   background-repeat: repeat-x;
   background-position: 0 100%;
   background-blend-mode: overlay;
-}
-
-@media screen and (max-width: 1170px) {
-  .projects {
-    padding: 8% 6% 20%;
-  }
 }
 
 .projects-wrapper {
@@ -387,7 +387,7 @@ main {
 
 .projects__main-block .projects__txt {
   display: block;
-  width: 37%;
+  width: 40%;
   padding-top: 5%;
 }
 
@@ -398,7 +398,7 @@ main {
 }
 
 .projects__main-block .projects__txt h2 {
-  font-family: 'Yeseva One', cursive;
+  font-family: "Yeseva One", cursive;
   text-transform: uppercase;
   font-size: 1.7rem;
   color: #e3b873;
@@ -435,8 +435,8 @@ main {
 }
 
 .projects__main-block .projects__slider {
-  position: relative;
-  width: 63%;
+  position: absolute;
+  left: 40%;
   padding-top: 5%;
   overflow: hidden;
 }
@@ -453,7 +453,7 @@ main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-family: 'Yeseva One', cursive;
+  font-family: "Yeseva One", cursive;
   text-transform: uppercase;
   font-size: 0.9rem;
   color: rgba(255, 255, 255, 0.3);
@@ -514,7 +514,7 @@ main {
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  right: 4%;
+  left: 11.7%;
   width: 55px;
   height: 55px;
   border-radius: 50%;
@@ -522,13 +522,12 @@ main {
   background-image: url("../assets/img/arrow-next_white.png");
   background-repeat: no-repeat;
   background-position: center;
+  cursor: pointer;
 }
 
 .projects__addition-info {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 37%;
+  width: 40%;
+  margin-top: 4%;
 }
 
 @media screen and (max-width: 1170px) {
@@ -558,7 +557,7 @@ main {
 }
 
 .projects__addition-info .projects__point p:first-child {
-  font-family: 'Yeseva One', cursive;
+  font-family: "Yeseva One", cursive;
   text-transform: uppercase;
   font-size: 1.1rem;
   color: #e3b873;
@@ -629,24 +628,41 @@ main {
   cursor: pointer;
 }
 
-.on-control {
+.shift-section-on-control {
   position: relative;
-  top: -320px;
+  height: 850px;
+}
+
+.on-control {
+  position: absolute;
+  top: -300px;
+  width: 100%;
   text-align: center;
+  color: #363636;
   background-color: transparent;
 }
 
-.on-control .form .form__flex-box {
+.on-control .form__on-control .form__display {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 53%;
-  margin: auto;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.on-control .form label {
+.on-control .form__on-control .form__main-group {
+  width: 18%;
+  height: 45px;
+  margin-right: 3%;
+  text-align: left;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 1px solid rgba(54, 54, 54, 0.3);
+}
+
+.on-control .form__on-control label {
   display: block;
   text-align: left;
   font-family: "Futura", sans-serif;
@@ -655,24 +671,42 @@ main {
   color: rgba(54, 54, 54, 0.5);
 }
 
-.on-control .form input[type="text"],
-.on-control .form input[type="number"] {
-  padding-bottom: 5px;
-  border-top: 0;
-  border-left: 0;
-  border-right: 0;
-  border-bottom: 1px solid rgba(54, 54, 54, 0.3);
+.on-control .form__on-control input[type="text"],
+.on-control .form__on-control input[type="number"] {
+  padding-top: 1%;
+  border: 0;
   font-family: "Futura", sans-serif;
   text-transform: none;
   font-size: 1.1rem;
-  color: #363636;
+  color: inherit;
+  background-color: transparent;
 }
 
-.on-control .form .form__checkbox {
+.on-control .form__on-control input[type="text"]::-webkit-input-placeholder,
+.on-control .form__on-control input[type="number"]::-webkit-input-placeholder {
+  color: inherit;
+}
+
+.on-control .form__on-control input[type="text"]:-ms-input-placeholder,
+.on-control .form__on-control input[type="number"]:-ms-input-placeholder {
+  color: inherit;
+}
+
+.on-control .form__on-control input[type="text"]::-ms-input-placeholder,
+.on-control .form__on-control input[type="number"]::-ms-input-placeholder {
+  color: inherit;
+}
+
+.on-control .form__on-control input[type="text"]::placeholder,
+.on-control .form__on-control input[type="number"]::placeholder {
+  color: inherit;
+}
+
+.on-control .form__on-control .form__checkbox {
   margin-top: 2%;
 }
 
-.on-control .form .form__checkbox .form__checkbox-label {
+.on-control .form__on-control .form__checkbox .form__checkbox-label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -686,46 +720,43 @@ main {
   color: #181818;
 }
 
-.on-control .form .form__checkbox input {
-  position: absolute;
-  width: 0;
-  height: 0;
+.on-control .form__on-control .form__checkbox input {
+  position: relative;
+  left: 18px;
+  opacity: 0;
 }
 
-.on-control .form .form__checkbox input:checked .form__checkmark {
-  position: absolute;
-  top: -3px;
-  left: 40%;
+.on-control .form__on-control .form__checkbox input:checked + .form__checkmark::after {
+  display: block;
+}
+
+.on-control .form__on-control .form__checkbox .form__checkmark {
+  position: relative;
+  top: 0;
+  left: 0;
   width: 18px;
   height: 18px;
+  margin-right: 7px;
+  border-radius: 2px;
   background-color: #e3b873;
   cursor: pointer;
 }
 
-.on-control .form .form__checkbox input:checked .form__checkmark::after {
+.on-control .form__on-control .form__checkbox .form__checkmark::after {
   content: "";
   position: absolute;
+  display: none;
   top: 3px;
   left: 6px;
   width: 4px;
   height: 7px;
-  border: solid white;
+  border: solid #fff;
   border-width: 0 2px 2px 0;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
 }
 
-.on-control .form .form__checkbox .form__checkmark {
-  position: absolute;
-  top: -3px;
-  left: 40%;
-  width: 18px;
-  height: 18px;
-  background-color: #e3b873;
-  cursor: pointer;
-}
-
-.on-control .form button {
+.on-control .form__on-control button {
   width: 200px;
   height: 50px;
   border-radius: 2px;
@@ -739,7 +770,7 @@ main {
   cursor: pointer;
 }
 
-.on-control .form button a {
+.on-control .form__on-control button a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -756,14 +787,14 @@ main {
 }
 
 .on-control__title h2 {
-  font-family: 'Yeseva One', cursive;
+  font-family: "Yeseva One", cursive;
   text-transform: uppercase;
   font-size: 1.25rem;
   color: #fff;
   line-height: 1.75rem;
 }
 
-.on-control__title .on-control__title-icon {
+.on-control__title .section__title-icon {
   position: relative;
   width: 37px;
   height: 28px;
@@ -771,7 +802,7 @@ main {
   background: url("../assets/img/online-cam.png") no-repeat;
 }
 
-.on-control__title .on-control__title-icon::before {
+.on-control__title .section__title-icon::before {
   content: "";
   position: absolute;
   top: 50%;
@@ -781,7 +812,7 @@ main {
   background-color: #e3b873;
 }
 
-.on-control__title .on-control__title-icon::after {
+.on-control__title .section__title-icon::after {
   content: "";
   position: absolute;
   top: 50%;
@@ -825,8 +856,8 @@ main {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 1;
-  -webkit-transition: background-color 1s ease-out .1s, z-index 1s ease-out .1s;
-  transition: background-color 1s ease-out .1s, z-index 1s ease-out .1s;
+  -webkit-transition: background-color 1s ease-out 0.1s, z-index 1s ease-out 0.1s;
+  transition: background-color 1s ease-out 0.1s, z-index 1s ease-out 0.1s;
 }
 
 .on-control__video:hover .btn-play,
@@ -841,7 +872,326 @@ main {
   font-family: "Futura", sans-serif;
   text-transform: none;
   font-size: 1.25rem;
-  color: #363636;
+  color: inherit;
   line-height: 2.13rem;
+}
+
+.types-repair {
+  text-align: center;
+}
+
+.types-repair__title h2 {
+  font-family: "Yeseva One", cursive;
+  text-transform: uppercase;
+  font-size: 1.25rem;
+  color: #181818;
+  line-height: 1.75rem;
+}
+
+.types-repair__title .section__title-icon {
+  position: relative;
+  width: 37px;
+  height: 28px;
+  margin: 13px auto 0;
+  background: url("../assets/img/types-repair-icon.png") no-repeat;
+}
+
+.types-repair__title .section__title-icon::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 140%;
+  width: 32px;
+  height: 1px;
+  background-color: #e3b873;
+}
+
+.types-repair__title .section__title-icon::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 140%;
+  width: 32px;
+  height: 1px;
+  background-color: #e3b873;
+}
+
+.types-repair__gallery {
+  display: -ms-grid;
+  display: grid;
+  margin-top: 30px;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 30px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.types-repair__gallery .col {
+  position: relative;
+}
+
+.types-repair__gallery .col img {
+  width: 100%;
+}
+
+.types-repair__gallery .col .col__txt-block {
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  width: 80%;
+  padding: 25px 0 0 35px;
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+  text-align: left;
+  background-color: #fff;
+  -webkit-box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
+          box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
+}
+
+.types-repair__gallery .col .col__txt-block h3 {
+  font-family: "Yeseva One", cursive;
+  text-transform: none;
+  font-size: 1.1rem;
+  color: #363636;
+}
+
+.types-repair__gallery .col .col__txt-block ul {
+  font-family: "Futura", sans-serif;
+  text-transform: none;
+  font-size: 0.9rem;
+  color: #959595;
+  margin-top: 13px;
+}
+
+.types-repair__gallery .col .col__txt-block ul li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 10px;
+}
+
+.types-repair__gallery .col .col__txt-block ul span {
+  display: inline-block;
+  width: 4px;
+  height: 4px;
+  margin-right: 4px;
+  border-radius: 50%;
+  background-color: #959595;
+}
+
+.col__btn {
+  width: 228px;
+  height: 54px;
+  border-radius: 2px;
+  text-transform: uppercase;
+  font-family: "Yeseva One", cursive;
+  font-size: 1.1rem;
+  color: #fff;
+  background-color: #e3b873;
+  -webkit-box-shadow: 0px 15px 15px rgba(227, 184, 115, 0.15);
+          box-shadow: 0px 15px 15px rgba(227, 184, 115, 0.15);
+  cursor: pointer;
+  -webkit-transform: translate(-35px, 50%);
+          transform: translate(-35px, 50%);
+}
+
+.col__btn a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-decoration: none;
+  color: #fff;
+}
+
+.types-repair__request {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 20% 0 25%;
+}
+
+.types-repair__bullets-wrapper {
+  position: relative;
+  width: 60%;
+  text-align: left;
+  color: #363636;
+}
+
+.types-repair__bullets-wrapper .types-repair__bullets-round {
+  position: absolute;
+  top: 0;
+  left: -32%;
+  width: 636px;
+  height: 636px;
+  border: 2px solid #000;
+  border-radius: 50%;
+}
+
+.types-repair__form {
+  width: 40%;
+  color: #fff;
+  background-color: #131313;
+}
+
+.types-repair__form p {
+  font-family: "Futura", sans-serif;
+  text-transform: none;
+  font-size: 1.25rem;
+  color: #fff;
+}
+
+.form__types-repair .form__display {
+  display: block;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.form__types-repair .form__main-group {
+  width: 100%;
+  height: 45px;
+  margin-right: 3%;
+  text-align: left;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+}
+
+.form__types-repair label {
+  display: block;
+  text-align: left;
+  font-family: "Futura", sans-serif;
+  text-transform: none;
+  font-size: 0.9rem;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.form__types-repair input[type="text"],
+.form__types-repair input[type="number"] {
+  padding-top: 1%;
+  border: 0;
+  font-family: "Futura", sans-serif;
+  text-transform: none;
+  font-size: 1.1rem;
+  color: inherit;
+  background-color: transparent;
+}
+
+.form__types-repair input[type="text"]::-webkit-input-placeholder,
+.form__types-repair input[type="number"]::-webkit-input-placeholder {
+  color: inherit;
+}
+
+.form__types-repair input[type="text"]:-ms-input-placeholder,
+.form__types-repair input[type="number"]:-ms-input-placeholder {
+  color: inherit;
+}
+
+.form__types-repair input[type="text"]::-ms-input-placeholder,
+.form__types-repair input[type="number"]::-ms-input-placeholder {
+  color: inherit;
+}
+
+.form__types-repair input[type="text"]::placeholder,
+.form__types-repair input[type="number"]::placeholder {
+  color: inherit;
+}
+
+.form__types-repair .form__checkbox {
+  margin-top: 2%;
+}
+
+.form__types-repair .form__checkbox .form__checkbox-label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #181818;
+}
+
+.form__types-repair .form__checkbox input {
+  position: relative;
+  left: 18px;
+  opacity: 0;
+}
+
+.form__types-repair .form__checkbox input:checked + .form__checkmark::after {
+  display: block;
+}
+
+.form__types-repair .form__checkbox .form__checkmark {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 18px;
+  height: 18px;
+  margin-right: 7px;
+  border-radius: 2px;
+  background-color: #e3b873;
+  cursor: pointer;
+}
+
+.form__types-repair .form__checkbox .form__checkmark::after {
+  content: "";
+  position: absolute;
+  display: none;
+  top: 3px;
+  left: 6px;
+  width: 4px;
+  height: 7px;
+  border: solid #fff;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.form__types-repair button {
+  width: 213px;
+  height: 50px;
+  border-radius: 2px;
+  text-transform: uppercase;
+  font-family: "Futura", sans-serif;
+  font-size: 0.8rem;
+  color: #fff;
+  background-color: #e3b873;
+  -webkit-box-shadow: 0px 15px 15px rgba(227, 184, 115, 0.15);
+          box-shadow: 0px 15px 15px rgba(227, 184, 115, 0.15);
+  cursor: pointer;
+}
+
+.form__types-repair button a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-decoration: none;
+  color: #fff;
 }
 /*# sourceMappingURL=main.css.map */
