--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,13 @@
 @import "reset";
-@import "variables";
 @import "layout/body";
+@import "components/variables";
 @import "components/fonts";
 @import "components/menu";
 @import "components/buttons";
+@import "components/section-title";
 @import "components/form";
+@import "components/img-3-col";
 @import "layout/header";
 @import "layout/complete-projects";
 @import "layout/on-control";
+@import "layout/types-repair";
