--- a/scss/layout/_on-control.scss
+++ b/scss/layout/_on-control.scss
@@ -11,7 +11,7 @@
   color: $dark_color;
   background-color: transparent;
 
-  .form__on-control {
+  .form {
     @include form(flex, rgba(54, 54, 54, 0.5), rgba(54, 54, 54, 0.3), 18%);
 
     button {
